--- a/lieblings-master/src/app/auth/valid/valid.component.html
+++ b/lieblings-master/src/app/auth/valid/valid.component.html
@@ -18,9 +18,8 @@
                  <!-- <div class="swal2-icon swal2-error swal2-animate-error-icon" style="display: flex;"><span class="swal2-x-mark"><span class="swal2-x-mark-line-left"></span><span class="swal2-x-mark-line-right"></span></span></div> -->
             <div class="mb-4 mt-6">
               <label class="block text-gray-700 text-sm font-semibold mb-2" htmlFor="email"> A Link To Reset Your Password Has Been Sent To Ee@Gmail.Com </label>
-              <a class="text-gray-700 text-sm  inline-flex items-center"> Emails may experience a few minute delay. </a>
-              <a class="text-gray-700 text-sm  inline-flex items-center"> If you have not received an email, please check your junk and spam folders. </a>
-              <a class="text-gray-700 text-sm  inline-flex items-center"> If you still don't receive the email after requesting a password reset, wait 24 hours and try again. </a>
+              <a class="text-gray-700 text-sm  inline-flex items-center"> If you still don't receive the email after requesting a password reset, wait 24 hours and  </a>
+              <strong><a routerLink="/auth/forgot" class="text-gray-700 text-sm  inline-flex items-center">try again.</a></strong>
             </div>
           </form>
           <div class="mt-4">
