--- a/lieblings-master/src/app/auth/valid/valid.component.scss
+++ b/lieblings-master/src/app/auth/valid/valid.component.scss
@@ -1373,5 +1373,6 @@ body.swal2-no-backdrop .swal2-shown.swal2-bottom-end,body.swal2-no-backdrop .swa
         transform:rotate(360deg)
     }
 }
-
-  
+.text-gray-700 {
+    display: inline;
+}
