--- a/lieblings-master/src/app/auth/forgot/forgot.component.html
+++ b/lieblings-master/src/app/auth/forgot/forgot.component.html
@@ -20,11 +20,11 @@
             </div>
             <div class="flex w-full mt-6">
               <button
-              routerLink="/auth/login" style="width:150px" class="w-full bg-white hover:bg-grey-900 text-gray-800 text-sm py-2 px-4 font-semibold rounded focus:outline-grey-900 focus:shadow-outline h-10"
+              routerLink="/auth/login" style="width:150px; border:black" class="w-full bg-gray-200 hover:bg-grey-900 text-gray-800 text-sm py-2 px-4 font-semibold rounded focus:outline-grey-900 focus:shadow-outline h-10"
               type="button"
             >Cancel</button>
               <button
-              routerLink="/auth/valid" style="width:150px; position: relative" class="w-full bg-gray-800 hover:bg-grey-900 text-white text-sm py-2 px-4 font-semibold rounded focus:shadow-outline h-10"
+              routerLink="/auth/valid" style="width:150px; position: relative; left: 60px;" class="w-full bg-gray-800 hover:bg-grey-900 text-white text-sm py-2 px-4 font-semibold rounded focus:shadow-outline h-10"
                 type="button">Continue</button>
             </div>
           </form>
