--- a/lieblings-master/src/app/product/product-list/product-list.component.html
+++ b/lieblings-master/src/app/product/product-list/product-list.component.html
@@ -82,7 +82,7 @@
               </h2>
               <div class="flex justify-between mt-5">
                 <div class="ll-product__price-label">Prices:</div>
-                <div class="ll-product__price text-accent font-bold">€{{ product.price }}</div>
+                <div class="ll-product__price text-accent font-bold">{{ product.price }}đ</div>
               </div>
             </div>
           </mat-card-content>
@@ -107,24 +107,6 @@
           width: 'calc(33% - 10px)'
         }"
       ></ngx-skeleton-loader>
-    </div>
-  </div>
-</div>
-
-<div class="ll-find-more mt-10 mb-36">
-  <div class="container rounded-md">
-    <h2 class="ll-find-more__heading">Didn't find what you were looking for? There is more we can do for you.</h2>
-    <div class="grid grid-cols-1 md:grid-cols-2 gap-8 mt-8">
-      <div class="_card bg-white rounded-md">
-        <h3 class="_card__title font-normal text-black">Post Requirements and let our consultants make an individual offer</h3>
-        <h5 class="_card__paragraph font-light text-black mt-3">Talent marketplace</h5>
-        <a href="" mat-fab color="warn" class="float-right mt-"><mat-icon>arrow_forward</mat-icon></a>
-      </div>
-      <div class="_card bg-white rounded-md ml-auto">
-        <h3 class="_card__title font-normal text-black">Post a problem and we will look for talented and skillful suitable advisors.</h3>
-        <h5 class="_card__paragraph font-light text-black mt-3">Scouting</h5>
-        <a href="" mat-fab color="warn" class="float-right mt-"><mat-icon>arrow_forward</mat-icon></a>
-      </div>
     </div>
   </div>
 </div>
