--- a/lieblings-master/src/app/auth/signup/signup.component.html
+++ b/lieblings-master/src/app/auth/signup/signup.component.html
@@ -27,12 +27,12 @@
             />
           </div>
           <div class="mb-6 mt-6">
-            <label class="block text-gray-700 text-sm font-semibold mb-2" for="password2"> Conformation Password </label>
+            <label class="block text-gray-700 text-sm font-semibold mb-2" for="password2"> Confirm Password </label>
             <input
               class="text-sm bg-gray-100 appearance-none rounded w-full py-2 px-3 text-gray-700 mb-1 leading-tight focus:outline-none focus:shadow-outline h-10"
               id="password2"
               type="password"
-              placeholder="Conformation password"
+              placeholder="Confirm password"
             />
           </div>
           <div class="flex items-center">
