--- a/lieblings-master/src/app/product/product-details/product-details.component.html
+++ b/lieblings-master/src/app/product/product-details/product-details.component.html
@@ -1,107 +1,191 @@
 <div class="mt-32">
   <div class="container">
     <div class="grid grid-cols-12 gap-8">
-      <div class="col-span-12 md:col-span-7 xl:col-span-8 border p-5">
-        <a href="javascript:void(0)" class="category text-primary inline-block mb-5">Personal</a>
-        <h1 class="_title font-medium">Potential analysis - digitization for manufacturing companies</h1>
-        <ul class="product-meta flex flex-wrap items-center mt-8 mb-8">
+      <div class="col-span-12 md:col-span-7 xl:col-span-8 border p-5" style="background-color: white;">
+        <div class="product-view-image">
+          <div class="product-view-image-product" img_index="0">
+            <img id="image" class="img"
+              src="https://cdn0.fahasa.com/media/catalog/product/n/x/nxbtre_full_14222022_022259.jpg"
+              data-src="https://cdn0.fahasa.com/media/catalog/product/n/x/nxbtre_full_14222022_022259.jpg"
+              alt="Văn Phòng Thám Tử Quái Vật - Tập 7" title="Văn Phòng Thám Tử Quái Vật - Tập 7">
+          </div>
+        </div>
+        <br>
+        <carousel>
+          <div class="carousel-cell" >
+            <img src="/assets/images/products/01-1.png">
+          </div>
+          <div class="carousel-cell">
+            <img src="/assets/images/products/01-1.png">
+          </div>
+          <div class="carousel-cell">
+            <img src="/assets/images/products/01-1.png">
+          </div>
+          <div class="carousel-cell">
+            <img src="/assets/images/products/01-1.png">
+          </div>
+          <div class="carousel-cell">
+            <img src="/assets/images/products/01-1.png">
+          </div>
+          <div class="carousel-cell">
+            <img src="/assets/images/products/01-1.png">
+          </div>
+        </carousel>
+        <!-- <ul class="product-meta flex flex-wrap items-center mt-8 mb-8">
           <li class="mr-4">
-            <a class="flex items-center pr-4 py-1 hover:text-primary" href="javascript:void(0)"
-              ><mat-icon class="mr-2" color="warn">start</mat-icon> 4.5/5 (14 Feedback)</a
-            >
+            <a class="flex items-center pr-4 py-1 hover:text-primary" href="javascript:void(0)">
+              <mat-icon class="mr-2" color="warn">start</mat-icon> 4.5/5 (14 Feedback)
+            </a>
           </li>
           <li class="mr-4">
-            <a class="flex items-center pr-4 py-1 hover:text-primary" href="javascript:void(0)"
-              ><mat-icon class="mr-2">favorite</mat-icon> Save</a
-            >
+            <a class="flex items-center pr-4 py-1 hover:text-primary" href="javascript:void(0)">
+              <mat-icon class="mr-2">favorite</mat-icon> Save
+            </a>
           </li>
 
           <li class="mr-4">
-            <a class="flex items-center pr-4 py-1 hover:text-primary" href="javascript:void(0)"
-              ><mat-icon class="mr-2">share</mat-icon> Share</a
-            >
+            <a class="flex items-center pr-4 py-1 hover:text-primary" href="javascript:void(0)">
+              <mat-icon class="mr-2">share</mat-icon> Share
+            </a>
           </li>
-        </ul>
-        <img class="w-full" src="assets/images/products/details.jpg" alt="img not found" />
+        </ul> -->
         <div class="ll-content mt-8">
-          <h5>
-            We provide you with process mechanics for plastics and rubber technology (m / f / d) from Spain. Our candidates speak English
-            and would like to continue their respective careers in the plastics country.
-          </h5>
-          <h6>Problem</h6>
-          <p>
-            It is difficult to find talented & motivated process mechanics in Germany. Lateral entrants from Germany can work, but the best
-            are those talents who have learned the process from scratch and can & want to imagine a career with it.
-          </p>
-          <h6>General situation:</h6>
-          <p>
-            Many production companies in plastics processing in Germany have been experiencing a shortage of talented and motivated process
-            mechanics for years. Only a few small and medium-sized companies actively use the talent pool from other EU countries. Many
-            process mechanics in other EU countries would like to continue their careers in Germany. Small and medium-sized teams in
-            particular offer such talents a warm atmosphere and the chance to feel at home.
-          </p>
-          <h6>Our solution:</h6>
-          <p>
-            We are looking for suitable process mechanics from Spain who speak good English according to your requirement profile and
-            support you in welcoming your ideal candidate to Germany even during the pandemic. Basically, the European population under the
-            age of 30, and especially those with an affinity for technology and machines, speak good to very good English. You should
-            benefit.
-          </p>
-          <h6>What you get with this booking and for this price:</h6>
-          <ul>
-            <li>
-              The successful placement of a process mechanic (m / f / d) according to your requirement profile for permanent employment
-            </li>
-            <li>The placement of a process mechanic (m / f / d) exclusively from Spain with a work permit for foeign countries</li>
-            <li>Placement of talents with a good command of English</li>
-          </ul>
-          <blockquote>
-            And talk about chicken nuggets and bacon BBQ souces. AND talk about chicken nuggets and bacon BBQ souces. AND talk about chicken
-            nuggets and bacon BBQ souces
-          </blockquote>
-          <h6>Requirements:</h6>
-          <ol>
-            <li>
-              You have to create the prerequisites in the factory & company to integrate a process mechanic who initially only speaks
-              English.
-            </li>
-            <li>We need a realistic requirement profile that takes into account the professional or differences in training in Spain.</li>
-          </ol>
-          <blockquote>
-            And talk about chicken nuggets and bacon BBQ souces. AND talk about chicken nuggets and bacon BBQ souces. AND talk about chicken
-            nuggets and bacon BBQ souces
-          </blockquote>
+          <mat-tab-group mat-align-tabs="start">
+            <mat-tab label="FRODUCT INFORMATION">
+              <div class="product_view_tab_content_ad">
+                <div class="product_view_tab_content_additional">
+                  <table class="data-table table-additional">
+                    <colgroup>
+                      <col width="25%">
+                      <col>
+                    </colgroup>
+                    <tbody>
+                      <tr>
+                        <th class="table-label">
+                          Product code </th>
+                        <td class="data_sku">
+                          8936071675552 </td>
+                      </tr>
+                      <tr>
+                        <th class="table-label">
+                          Supplier </th>
+                        <td class="data_supplier">
+                          <a class="xem-chi-tiet" href="dong-a?fhs_campaign=ATTRIBUTE_PRODUCT">Đông A</a>
+                        </td>
+                      </tr>
+                      <tr>
+                        <th class="table-label">
+                          Author </th>
+                        <td class="data_author">
+                          Hector Malot </td>
+                      </tr>
+                      <tr>
+                        <th class="table-label">
+                          Translator </th>
+                        <td class="data_translator">
+                          Huỳnh Lý </td>
+                      </tr>
+                      <tr>
+                        <th class="table-label">
+                          Publisher </th>
+                        <td class="data_publisher">
+                          NXB Văn Học </td>
+                      </tr>
+                      <tr>
+                        <th class="table-label">
+                          Publish Year </th>
+                        <td class="data_publish_year">
+                          2018 </td>
+                      </tr>
+                      <tr>
+                        <th class="table-label">
+                          Language </th>
+                        <td class="data_languages">
+                          Tiếng Việt </td>
+                      </tr>
+                      <tr>
+                        <th class="table-label">
+                          Weight </th>
+                        <td class="data_weight">
+                          590 </td>
+                      </tr>
+                      <tr>
+                        <th class="table-label">
+                          Size </th>
+                        <td class="data_size">
+                          24 x 16 x 0.5 cm </td>
+                      </tr>
+                      <tr>
+                        <th class="table-label">
+                          Quantity of Page </th>
+                        <td class="data_qty_of_page">
+                          568 </td>
+                      </tr>
+                      <tr>
+                      </tr>
+                    </tbody>
+                  </table>
+                </div>
+                <br>
+                <p>
+                  Không gia đình là tiểu thuyết nổi tiếng nhất trong sự nghiệp văn chương của Hector Malot. Hơn một trăm
+                  năm
+                  nay, tác phẩm giành giải thưởng của Viện Hàn Lâm Văn học Pháp này đã trở thành người bạn thân thiết
+                  của
+                  thiếu nhi và tất cả những người yêu mến trẻ khắp thế giới.
+                </p>
+                <p>
+                  Không gia đình kể về chuyện đời Rémi, một cậu bé không cha mẹ, họ hàng thân thích. Sau khi phải rời
+                  khỏi
+                  vòng tay của người má nuôi, em đã đi theo đoàn xiếc thú của cụ già Vitalis tốt bụng. Kể từ đó, em lưu
+                  lạc
+                  khắp nơi, ban đầu dưới sự che chở của cụ Vitalis, sau đó thì tự lập và còn lo cả công việc biểu diễn
+                  và sinh
+                  sống cho cả một gánh hát rong. Đã có lúc em và cả đoàn lang thang cả mấy ngày đói khát rồi còn suýt
+                  chết
+                  rét. Có bận em bị lụt ngầm chôn trong giếng mỏ hàng tuần. Rồi có lần em còn mắc oan bị giải ra tòa và
+                  phải ở
+                  tù. Nhưng cũng có khi em được nuôi nấng đàng hoàng, no ấm. Song dù trong hoàn cảnh nào, Rémi vẫn giữ
+                  được sự
+                  gan dạ, ngay thẳng, lòng tự trọng, tính thương người, ham lao động chứ không hạ mình hay gian dối.
+                  Cuối
+                  cùng, sau bao gian nan khổ cực, em đã đoàn tụ được với gia đình của mình.
+                </p>
+              </div>
+            </mat-tab>
+            <mat-tab label="PRODUCT REVIEWS">Content 2</mat-tab>
+
+          </mat-tab-group>
         </div>
       </div>
       <div class="col-span-12 md:col-span-5 xl:col-span-4">
-        <div class="border">
-          <div class="border-b text-center pt-10 pb-10">
-            <div class="text-accent text-4xl font-semibold">€3,000.00</div>
-            <div class="font-medium text-lg mt-3 text-gray-400 tracking-wider">Price</div>
+        <div class="border" style="background-color: white;">
+          <div class="border-b pt-10 pb-10">
+            <h1 class="_title font-medium" style="position:relative; left:20px; top:2px;">Không Gia Đình (Bìa Cứng)</h1>
+            <div class="text-accent text-4xl font-semibold" style="position:relative; left:20px; top:2px;">130.000 đ
+            </div>
           </div>
           <div class="border-b p-5">
             <ul class="service-info">
               <li class="py-2 mr-2">
-                <div class="flex items-center">
-                  <mat-icon class="text-primary border-2 rounded-full w-6 h-6 text-center leading-5 mr-2">check</mat-icon>
-                  <strong class="mr-2 font-black">96</strong> interested persons
+                <div class="flex items-center" style="font-size: 15px;">
+                  <!-- <mat-icon class="text-primary border-2 rounded-full w-6 h-6 text-center leading-5 mr-2">check</mat-icon> -->
+                  <strong class="mr-2 font-black">Supplier: </strong> Đông A
                 </div>
               </li>
               <li class="py-2 mr-2">
-                <div class="flex items-center">
-                  <mat-icon class="text-primary border-2 rounded-full w-6 h-6 text-center leading-5 mr-2">check</mat-icon>
-                  <strong class="mr-2 font-black">1 hours</strong> reaction time
+                <div class="flex items-center" style="position: relative; left: 70px;font-size: 15px;">
+                  <strong class="mr-2 font-black">Author: </strong> Hector Malot
                 </div>
               </li>
               <li class="py-2 mr-2">
-                <div class="flex items-center">
-                  <mat-icon class="text-primary border-2 rounded-full w-6 h-6 text-center leading-5 mr-2">check</mat-icon>
-                  <strong class="mr-2 font-black">12 hours</strong> delivery time
+                <div class="flex items-center" style="font-size: 15px;">
+                  <strong class="mr-2 font-black">Publisher: </strong> NXB Văn Học
                 </div>
               </li>
             </ul>
-          </div>
-          <div class="border-b p-5">
+            <!-- </div> -->
+            <!-- <div class="border-b p-5">
             <h5>Addons Services</h5>
             <div class="flex mt-2">
               <div class="sm:pt-1 mr-3 sm:mr-6 md:mr-8">
@@ -129,15 +213,35 @@
                 </p>
               </div>
             </div>
-          </div>
-          <div class="border-b px-5 pt-10 pb-12 text-center">
-            <p class="text-gray-400 mb-4">This price can increase due to additional bookings</p>
-            <button mat-flat-button class="py-3 px-20 text-xl font-bold" color="accent">Buy now</button>
+          </div> -->
+            <!-- <div class="border-b px-5 pt-10 pb-12 text-center"> -->
+            <!-- <p class="text-gray-400 mb-4">This price can increase due to additional bookings</p> -->
+            <br>
+            <div class="product-view-quantity-box">
+              <label for="qty">Quantity:</label>
+              <div class="product-view-quantity-box-block">
+                <a class="btn-subtract-qty" onclick="subtractQty();"><img style="width: 12px; height: auto;"
+                    src="https://cdn0.fahasa.com/skin/frontend/ma_vanese/fahasa/images/ico_minus2x.png"></a>
+                <input type="text" name="qty" id="qty" maxvalue="999" minvalue="1" align="center" value="1"
+                  onkeypress="validateNumber(event)" onblur="validateQty();" title="Qty" class="input-text qty">
+                <a class="btn-add-qty" onclick="addQty();"><img style="width: 12px; height: auto;"
+                    src="https://cdn0.fahasa.com/skin/frontend/ma_vanese/fahasa/images/ico_plus2x.png"></a>
+              </div>
+            </div>
+            <br>
+            <button mat-flat-button
+              class="w-full text-xl font-semibold rounded focus:outline-grey-900 focus:shadow-outline h-10"
+              style="width: 150px; border: 2px solid #C92127;height:44px; border-radius: 8px;color:#C92127">
+              <span class="fhs_icon_cart"></span> Add to Cart</button>
+            <button routerLink="/checkout" mat-flat-button
+              class="w-full text-white text-xl font-semibold rounded focus:shadow-outline h-10"
+              style="width: 150px; position: relative; left: 40px; height:44px;border-radius: 8px;background-color:#C92127">Buy
+              now</button>
           </div>
         </div>
-        <div class="border mt-5 px-5 py-10 text-center">
+        <div class="border mt-5 px-5 py-10 text-center" style="background-color: white;">
           <p class="font-bold mb-3">Do you have any special requirements?</p>
-          <button mat-stroked-button class="py-2 px-12 text-lg font-bold text-gray-700">Send us</button>
+          <button mat-stroked-button class="py-2 px-12 text-xl font-bold text-gray-700">Send us</button>
         </div>
       </div>
     </div>
