--- a/lieblings-master/src/app/auth/signup/signup.component.html
+++ b/lieblings-master/src/app/auth/signup/signup.component.html
@@ -19,12 +19,18 @@
           </div>
           <div class="mb-6 mt-6">
             <label class="block text-gray-700 text-sm font-semibold mb-2" for="password"> Password </label>
-            <input
+            <input type="password" 
               class="text-sm bg-gray-100 appearance-none rounded w-full py-2 px-3 text-gray-700 mb-1 leading-tight focus:outline-none focus:shadow-outline h-10"
-              id="password"
-              type="password"
-              placeholder="Password"
-            />
+              id="password" name="password" [(ngModel)]="account.password" #password="ngModel"
+              minlength="5" maxlength="50"
+              placeholder="Your password" required>
+            <ng9-password-strength-bar
+           [passwordToCheck]="account.password"
+           [barLabel]="barLabel"
+           [customThresholds]="thresholds"
+           [barColors]="myColors"
+           [strengthLabels]="strengthLabels">
+       </ng9-password-strength-bar>
           </div>
           <div class="mb-6 mt-6">
             <label class="block text-gray-700 text-sm font-semibold mb-2" for="password2"> Confirm Password </label>
