--- a/lieblings-master/src/app/auth/forgot/forgot.component.html
+++ b/lieblings-master/src/app/auth/forgot/forgot.component.html
@@ -6,7 +6,7 @@
       </div>
       <div class="login__content p-4 sm:p-8 flex flex-col justify-center bg-accent">
         <div class="login w-full max-w-xl rounded-md mx-auto border p-4 sm:p-8 xl:p-20">
-          <form>
+          <form [formGroup]="ForgotForm" (ngSubmit)="onSubmit()">
             <h1 class="text-2xl font-bold">Forgotten password</h1>
             <div class="mb-4 mt-6">
               <label class="block text-gray-700 text-sm font-semibold mb-2" htmlFor="email"> If you've forgotten your password, please enter your registered email address. </label>
@@ -16,16 +16,37 @@
                 id="email"
                 type="text"
                 placeholder="Your email address"
+                formControlName="fct_email"
+                (focus)="unSubmit()"
               />
             </div>
+
+
+            <div *ngIf="submitted && ForgotForm.controls.fct_email.errors"class="text-danger">
+              <div style="color:red;"*ngIf="ForgotForm.controls.fct_email.errors?.required">Email is required.</div>
+              <div style="color:red;"*ngIf="ForgotForm.controls.fct_email.errors?.email">Not an Email</div>         
+            </div>
+
+            <!-- <div *ngIf="submitted && ForgotForm.controls.fct_email.errors"class="text-danger">
+              <div  style="color: red;" *ngIf="ForgotForm.controls.fct_email.errors?.required">   Email is required</div>
+              <div  style="color: red;" *ngIf="ForgotForm.controls.fct_email.errors?.email">   Not an Email</div>
+            </div> -->
+
+
             <div class="flex w-full mt-6">
               <button
               routerLink="/auth/login" style="width:150px; border:black" class="w-full bg-gray-200 hover:bg-grey-900 text-gray-800 text-sm py-2 px-4 font-semibold rounded focus:outline-grey-900 focus:shadow-outline h-10"
               type="button"
             >Cancel</button>
               <button
-              routerLink="/auth/valid" style="width:150px; position: relative; left: 60px;" class="w-full bg-gray-800 hover:bg-grey-900 text-white text-sm py-2 px-4 font-semibold rounded focus:shadow-outline h-10"
-                type="button">Continue</button>
+                style="width:150px; position: relative; left: 60px;"
+                class="w-full bg-gray-800 hover:bg-grey-900 text-white text-sm py-2 px-4 font-semibold rounded focus:shadow-outline h-10"
+              >Continue
+            </button>
+            <button
+              id = "test-navigate"
+              routerLink= "/auth/valid">
+            </button>
             </div>
           </form>
           <div class="mt-4">
