--- a/lieblings-master/src/app/auth/login/login.component.html
+++ b/lieblings-master/src/app/auth/login/login.component.html
@@ -6,33 +6,76 @@
     </div>
     <div class="login__content p-4 sm:p-8 flex flex-col justify-center bg-accent">
       <div class="login w-full max-w-xl rounded-md mx-auto border p-4 sm:p-8 xl:p-20">
-        <form>
+        <form [formGroup]="LoginForm" (ngSubmit)="onSubmit()">
           <h1 class="text-2xl font-bold">Sign in</h1>
-          <div class="mb-4 mt-6">
+          <div class="mb-4 mt-6 abc" >
             <label class="block text-gray-700 text-sm font-semibold mb-2" htmlFor="email"> Email </label>
             <input
               class="text-sm appearance-none rounded w-full py-2 px-3 text-gray-700 bg-gray-100 leading-tight focus:outline-none focus:shadow-outline h-10"
               id="email"
-              type="text"
+              type="email"
               [(ngModel)]="account.email"
-              placeholder="Your email address">
-          </div>
-          <div class="mb-6 mt-6">
-            <label class="block text-gray-700 text-sm font-semibold mb-2" htmlFor="password"> Password </label>
-            <input type="password" 
-              class="text-sm bg-gray-100 appearance-none rounded w-full py-2 px-3 text-gray-700 mb-1 leading-tight focus:outline-none focus:shadow-outline h-10"
-              id="password" name="password" [(ngModel)]="account.password" #password="ngModel"
-              minlength="5" maxlength="50"
-              placeholder="Your password" required>
+              placeholder="Your email address"
+              required
+              (focus)="unSubmit()"
+              formControlName="fct_email"
+              >
+
             
-       <ng9-password-strength-bar
-           [passwordToCheck]="account.password"
-           [barLabel]="barLabel"
-           [customThresholds]="thresholds"
-           [barColors]="myColors"
-           [strengthLabels]="strengthLabels">
-       </ng9-password-strength-bar>
+              <div *ngIf="submitted && LoginForm.controls.fct_email.errors"class="text-danger">
+                <div  style="color: red;" *ngIf="LoginForm.controls.fct_email.errors?.required">   Email is required</div>
+                <div  style="color: red;" *ngIf="LoginForm.controls.fct_email.errors?.email">   Not an Email</div>
+            </div>
+
+             
           </div>
+
+          <div class="mb-6 mt-6 abc">
+            <label class="block text-gray-700 text-sm font-semibold mb-2" htmlFor="password">   Password </label>
+            <input type="password"
+              input [type] = "passType"
+              class="text-sm bg-gray-100 appearance-none rounded w-full py-2 px-3 text-gray-700 mb-1 leading-tight focus:outline-none focus:shadow-outline h-10"
+              id="password" 
+              name="password" 
+              [(ngModel)]="account.password" 
+              minlength="5" maxlength="50"
+              placeholder="Your password" 
+              required
+              (focus)="unSubmit()"
+              formControlName="fct_password" 
+              >
+
+              
+            <span class="icon-eye-show" (click)="changePasswordType()">
+              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-eye-fill" viewBox="0 0 16 16">
+                <path d="M10.5 8a2.5 2.5 0 1 1-5 0 2.5 2.5 0 0 1 5 0z"/>
+                <path d="M0 8s3-5.5 8-5.5S16 8 16 8s-3 5.5-8 5.5S0 8 0 8zm8 3.5a3.5 3.5 0 1 0 0-7 3.5 3.5 0 0 0 0 7z"/>
+              </svg>  
+            </span>
+  
+            
+            <span class="icon-eye-hidden disable" (click)="changePasswordType()">
+              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-eye-slash-fill" viewBox="0 0 16 16">
+                <path d="m10.79 12.912-1.614-1.615a3.5 3.5 0 0 1-4.474-4.474l-2.06-2.06C.938 6.278 0 8 0 8s3 5.5 8 5.5a7.029 7.029 0 0 0 2.79-.588zM5.21 3.088A7.028 7.028 0 0 1 8 2.5c5 0 8 5.5 8 5.5s-.939 1.721-2.641 3.238l-2.062-2.062a3.5 3.5 0 0 0-4.474-4.474L5.21 3.089z"/>
+                <path d="M5.525 7.646a2.5 2.5 0 0 0 2.829 2.829l-2.83-2.829zm4.95.708-2.829-2.83a2.5 2.5 0 0 1 2.829 2.829zm3.171 6-12-12 .708-.708 12 12-.708.708z"/>
+              </svg>
+            </span>
+            
+            <div *ngIf="submitted && LoginForm.controls.fct_password.errors"class="text-danger">
+                <div  style="color: red;" *ngIf="LoginForm.controls.fct_password.errors.required">Password is required</div>
+                <div style="color:red" *ngIf="LoginForm.controls.fct_password.errors.minlength">Password is so short</div>
+            </div>
+
+            <ng9-password-strength-bar
+                [passwordToCheck]="account.password"
+                [barLabel]="barLabel"
+                [customThresholds]="thresholds"
+                [barColors]="myColors"
+                [strengthLabels]="strengthLabels">
+            </ng9-password-strength-bar>
+
+          </div>
+
           <div class="flex items-center">
             <input
               id="remember_me"
@@ -43,16 +86,16 @@
             <label for="remember_me" class="ml-2 block text-sm text-gray-900"> Keep me signed in </label>
           </div>
           <div class="flex w-full mt-6">
-            <button routerLink="/auth/forgot"
+            <button 
               class="w-full bg-gray-800 hover:bg-grey-900 text-white text-sm py-2 px-4 font-semibold rounded focus:outline-none focus:shadow-outline h-10"
-              type="button" 
-            >
-              Sign in
+            > 
+            Sign in
             </button>
           </div>
         </form>
+
         <div class="mt-4">
-          <a routerLink="/auth/forgot" class="hover:underline hover:text-accent">Forgot password?</a>
+          <a routerLink="/auth/forgot" class="hover:underline hover:text-accent" >Forgot password?</a>
         </div>
         <div class="mt-3">
           <span class="text-gray-600 text-sm"> Don't have an account? </span>
@@ -61,7 +104,12 @@
         <div class="mt-4">
           <a [routerLink]="['/']"  class="text-gray-700 text-sm hover:text-accent inline-flex items-center"><mat-icon class="h-4 w-4 leading-4 text-lg mr-2">keyboard_backspace</mat-icon>Go to Home</a>
         </div>
+
+
+        
       </div>
+      
     </div>
+
   </div>
 </div>
