--- a/lieblings-master/src/app/auth/signup/signup.component.html
+++ b/lieblings-master/src/app/auth/signup/signup.component.html
@@ -6,24 +6,45 @@
     </div>
     <div class="login__content p-4 sm:p-8 flex flex-col justify-center bg-accent">
       <div class="login w-full max-w-xl rounded-md mx-auto border p-4 sm:p-8 xl:p-20">
-        <form>
+        <form [formGroup]="SingupForm" (ngSubmit)="onSubmit()">
           <h1 class="text-2xl font-bold">Sign up</h1>
           <div class="mb-4 mt-6">
             <label class="block text-gray-700 text-sm font-semibold mb-2" for="email"> Email </label>
             <input
               class="text-sm appearance-none rounded w-full py-2 px-3 text-gray-700 bg-gray-100 leading-tight focus:outline-none focus:shadow-outline h-10"
               id="email"
-              type="text"
+              type="email"
               placeholder="Email address"
-            />
+              
+              (focus)="unSubmit()"
+              formControlName="fct_email"
+              
+            >
+            <div *ngIf="submitted && SingupForm.controls.fct_email.errors"class="text-danger">
+              <div  style="color: red;" *ngIf="SingupForm.controls.fct_email.errors?.required">   Email is required</div>
+              <div  style="color: red;" *ngIf="SingupForm.controls.fct_email.errors?.email">   Not an Email</div>
+          </div>
+
+
           </div>
           <div class="mb-6 mt-6">
             <label class="block text-gray-700 text-sm font-semibold mb-2" for="password"> Password </label>
             <input type="password" 
               class="text-sm bg-gray-100 appearance-none rounded w-full py-2 px-3 text-gray-700 mb-1 leading-tight focus:outline-none focus:shadow-outline h-10"
-              id="password" name="password" [(ngModel)]="account.password" #password="ngModel"
+              id="password" 
+              name="password" 
+              [(ngModel)]="account.password" 
               minlength="5" maxlength="50"
-              placeholder="Your password" required>
+              placeholder="Your password"
+              (focus)="unSubmit()"
+              formControlName="fct_password"
+              >
+              <div *ngIf="submitted && SingupForm.controls.fct_password.errors"class="text-danger">
+                <div  style="color: red;" *ngIf="SingupForm.controls.fct_password.errors?.required">   Password is required</div>
+                <div  style="color: red;" *ngIf="SingupForm.controls.fct_password.errors?.minlength">   Password is so short</div>
+            </div>
+
+
             <ng9-password-strength-bar
            [passwordToCheck]="account.password"
            [barLabel]="barLabel"
@@ -33,27 +54,45 @@
        </ng9-password-strength-bar>
           </div>
           <div class="mb-6 mt-6">
-            <label class="block text-gray-700 text-sm font-semibold mb-2" for="password2"> Confirm Password </label>
+            <label class="block text-gray-700 text-sm font-semibold mb-2" for="pass"> Confirm Password </label>
             <input
               class="text-sm bg-gray-100 appearance-none rounded w-full py-2 px-3 text-gray-700 mb-1 leading-tight focus:outline-none focus:shadow-outline h-10"
-              id="password2"
+              id="conpassword"
               type="password"
               placeholder="Confirm password"
-            />
+              (focus)="unSubmit()"
+              formControlName="fct_conpassword"
+              >
+              <span style="color: red;" *ngIf="submitted &&SingupForm.controls.fct_conpassword.errors?.required">
+                Confirm Password is required
+              </span>
+
+              <span style="color: red;" class="errors-message disable">
+                Confirm Password is mismatch
+              </span>
           </div>
+
+ 
           <div class="flex items-center">
             <input
               id="remember_me"
               name="remember_me"
               type="checkbox"
-              class="h-4 w-4 text-indigo-600 focus:ring-indigo-500 border rounded"
+              class="h-4 w-4 text-indigo-600 focus:ring-indigo-500 border rounded;"
+              (change)="click_checkbox()"
             />
             <label for="remember_me" class="ml-2 block text-sm text-gray-900"> I agree with RedLight Terms and conditions. </label>
+ 
           </div>
+          <span style="color:red;" class="check-message disable">
+            Please check here
+          </span>
+
+
           <div class="flex w-full mt-6">
             <button
               class="w-full bg-gray-800 hover:bg-grey-900 text-white text-sm py-2 px-4 font-semibold rounded focus:outline-none focus:shadow-outline h-10"
-              type="button"
+             
             >
               Sign up
             </button>
